--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -2,6 +2,7 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/
 $fa-font-path: "/bower_components/font-awesome/fonts";
 
 @import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
+@import 'Bootflat/bootflat/scss/bootflat.scss';
 @import 'font-awesome/scss/font-awesome';
 
 /**
